2014-07-03  James Hunt  <james.hunt@ubuntu.com>

	* src/pr_list.c: 
	  - New functions:
	    - pr_list_append_str()
	    - pr_list_appendn_str()
	    - pr_list_prependn_str()
	* src/procenv.c: 
	  - procenv_getcpu(): A {RHEL,Centos} 5-pecific hack to fully
	    resolve LP: #1333194 by working around fact that glibc on that
	    platform does not provide sched_getcpu(3).

2014-06-26  James Hunt  <james.hunt@ubuntu.com>

	* TODO: Updates.
	* src/procenv.c:
	  - More fixes for LP: #1333194:
	    - show_capabilities_linux(): Guard PR_CAPBSET_READ.
	    - cap_get_bound(): Guard PR_CAPBSET_READ.
	* src/procenv.h: Define CAP_LAST_CAP when using old versions of libcap.

2014-06-26  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c:
	  - show_numa_memory():
	    - Fix for systems using old numa libraries (RHEL5). This should
	      really fix LP: #1333194.
	  - show_security_module():
	    - Corrected SELinux checking code.
	    - Added MLS detail.
	  - show_shared_mem_linux():
	    - Compiler appeasement.
	    - Added 'swap_attempts' and 'swap_successes' (apparently now unused,
	      but displayed for completeness).
	  - show_msg_queues_linux(): Compiler appeasement.
	* src/procenv.h:
	  - PROCENV_FORMAT_VERSION: Bumped to v8.
	  - Added PROCENV_NUMA_BITMASK_ISSET() macro to handle both old and new
	    libnuma API's.

2014-06-25  James Hunt  <james.hunt@ubuntu.com>

	* src/procenv.c:
	  - get_mtu(): Ensure unsigned long used for ioctl(2) request parameter
	    (caught by FreeBSD's "WARNING ioctl sign-extension ioctl" console
	    message).
	  - get_mac_address(): As above.
	  - show_uname(): Handle unset uts.domainname without an
	    assertion to cope on OpenSuSE 13.1 systems.

2014-06-24  James Hunt  <james.hunt@ubuntu.com>

	* configure.ac: Add header checks for selinux and apparmor (LP: #1333182).
	* procenv.spec.in: Added 'libselinux-devel' to BuildRequires.
	* src/Makefile.am: Use $(top_builddir) and $(subdir) rather than