@@ -1,3 +1,8 @@
+2014-07-04  James Hunt  <james.hunt@ubuntu.com>
+
+	* src/procenv.c: Correct guard used around procenv_getcpu()
+	  and split_fields().
+
 2014-07-03  James Hunt  <james.hunt@ubuntu.com>
 
 	* src/pr_list.c: 
